# angr_mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/angr_mcp_plugin/: __init__.py  cli.py  mcp_server.py  plugin.py  plugin.toml  session_state.py  sync_contract.py
src/angr_mcp_plugin/tools/: __init__.py  automation.py  core.py  symbolic.py
tests/: test_plugin_lifecycle.py  test_session_state.py  test_sync_contract.py  test_tools_registration.py
